add the decision tree model

--- a/dev/model.ipynb
+++ b/dev/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +45,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clean the imported dataset including filling the missing values, handling the categorical attributes and normalizing the predictor's values such that they can work well with the regression algorithm. The procedure will result in the preprocessed predictors and the preprocessed targets."
+    "Clean the imported dataset including fill the missing values, handle the categorical attributes and normalize the predictor's values such that they can work well with the regression algorithm. The procedure will result in the preprocessed predictors and the preprocessed targets."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,17 +206,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# initiate the model\n",
-    "tree = lib.model_init('decision_tree')"
+    "tree = lib.decision_tree()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -231,8 +231,8 @@
       "------------------------------------\n",
       "|The model performance for test set|\n",
       "------------------------------------\n",
-      "RMSE is: 5.1925\n",
-      "R2 score is: 0.6432\n",
+      "RMSE is: 5.4929\n",
+      "R2 score is: 0.6329\n",
       "----------------------------------------------------------------\n",
       "|The cross validation of the model performance for training set|\n",
       "----------------------------------------------------------------\n",
